src/tests/snapshots/scl__tests__runtime@impl_specific_struct_type.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/impl_specific_struct_type.scl
---

