src/tests/snapshots/scl__tests__runtime@impl_specific_struct_type.scl-4.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/impl_specific_struct_type.scl
---
exit status: 0
