src/tests/snapshots/scl__tests__runtime@pointers.scl-3.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/pointers.scl
---
*a.value = 10
*c = 20
e = 30
h.value = 40
