src/tests/snapshots/scl__tests__runtime@pointers.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/pointers.scl
---
exit status: 0
