src/tests/snapshots/scl__tests__runtime@proc_return_implicit.scl-2.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/proc_return_implicit.scl
---

