src/tests/snapshots/scl__tests__runtime@proc_return_implicit.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/proc_return_implicit.scl
---
exit status: 123
