src/tests/snapshots/scl__tests__runtime@proc_return_implicit.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/runtime/proc_return_implicit.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    name: "main",
                    type_id: TypeId(
                        9,
                    ),
                    body: CheckedBlock {
                        stmts: [],
                        last: Some(
                            CheckedExpr {
                                type_id: TypeId(
                                    2,
                                ),
                                lvalue: false,
                                kind: Number(
                                    123,
                                ),
                            },
                        ),
                        type_id: TypeId(
                            2,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        2,
                    ),
                    stack_slots: StackSlots {
                        slots: [],
                    },
                },
            ],
        },
    ],
}
